# plan_toir_v1

./: pyproject.toml
plan_toir_project/: app.py  data_fileseo_data_update_after_component_class_id.csv  eo_data.py  functions.py  tab_main.py  yad.py
plan_toir_project/data_files/: counter_data.csv  eo_list (18) - eo_list (18).csv  eo_list.csv  eo_list_update.csv  interval_between_overhaul_data (copy).csv  interval_between_overhaul_data.csv  interval_between_overhaul_data_template.csv  overhaul_cost_data.csv
plan_toir_project/functions/: eo_data.py  yad.py
plan_toir_project/temp_files/: 785С_motohours.csv  eo_data_filtered_component_class_id_DVS.csv  eo_data_filtered_eo_main_class_id.csv  eo_list.csv  interval_between_overhaul_data_df.csv
