[tool.poetry]
name = "repl_python3_plantoirv1"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
yadisk = "^1.2.15"
pandas = "^1.4.2"
dash-bootstrap-components = "^1.1.0"
dash = "^2.4.1"
dash-bootstrap-templates = "^1.0.5"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
